# ouster_flir_calibration

./: CMakeLists.txt  package.xml
DATA/: update_timestamp.py
DATA/2_CAPTURE/XYZI/: CALIB_cloud_XYZI001.pcd  CALIB_cloud_XYZI002.pcd  CALIB_cloud_XYZI003.pcd  CALIB_cloud_XYZI004.pcd
DATA/2_CAPTURE/XYZIR/: CALIB_cloud_XYZIR001.pcd  CALIB_cloud_XYZIR002.pcd  CALIB_cloud_XYZIR003.pcd  CALIB_cloud_XYZIR004.pcd
DATA/3_POINTS/IMG/: IMG001.xyz  IMG002.xyz  IMG003.xyz  IMG004.xyz
DATA/3_POINTS/PCD/: PCD001.xyz  PCD002.xyz  PCD003.xyz  PCD004.xyz
cfg/: dynamic_params.cfg
config/: capture.rviz  extract_lidar_points.rviz  params.yaml  result.rviz
include/ouster_flir_calibration/: calibrate.hpp  capture.hpp  extract_lidar_points.hpp  my_global_header.hpp  result.hpp
launch/: calibrate.launch  capture.launch  extract_image_points.launch  extract_lidar_points.launch  result.launch
src/: extract_points.cpp  main_calibrate.cpp  main_capture.cpp  main_dyn.cpp  main_extract_image_points.cpp  main_extract_lidar_points.cpp  main_result.cpp
